rs/macros/core/tests/snapshots/gprogram__generates_handle_for_services_with_unwrap_result.snap
---
source: rs/macros/core/tests/gprogram.rs
expression: result
---
impl MyProgram {
    fn __service1(&self) -> Result<MyService, String> {
        Ok(MyService)
    }
    fn __service2(&self) -> MyService {
        MyService
    }
    pub fn create() -> Self {
        Default::default()
    }
    pub fn service1(&self) -> <MyService as sails::gstd::services::Service>::Exposure {
        let service = self.__service1().unwrap();
        let exposure = <MyService as sails::gstd::services::Service>::expose(
            service,
            1u8,
        );
        exposure
    }
    pub fn service2(&self) -> <MyService as sails::gstd::services::Service>::Exposure {
        let service = self.__service2();
        let exposure = <MyService as sails::gstd::services::Service>::expose(
            service,
            2u8,
        );
        exposure
    }
}
impl sails::meta::ProgramMeta for MyProgram {
    type ConstructorsMeta = meta_in_program::ConstructorsMeta;
    const SERVICES: &'static [(&'static str, sails::meta::AnyServiceMeta)] = &[
        ("Svc1", <MyService as sails::meta::ServiceMeta>::META),
        ("Service2", <MyService as sails::meta::ServiceMeta>::META),
    ];
    const ASYNC: bool = <MyService as sails::meta::ServiceMeta>::ASYNC
        || <MyService as sails::meta::ServiceMeta>::ASYNC;
}
mod meta_in_program {
    use super::*;
    sails::invocation_io!(pub struct __CreateParams {}, entry_id = 0u16,);
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum ConstructorsMeta {
        Create(__CreateParams),
    }
}
#[cfg(target_arch = "wasm32")]
pub mod wasm {
    use super::*;
    use sails::{gstd, hex, prelude::*};
    static mut PROGRAM: Option<MyProgram> = None;
    #[unsafe(no_mangle)]
    extern "C" fn init() {
        let mut input: &[u8] = &gstd::msg::load_bytes().expect("Failed to read input");
        if input.is_empty() {
            sails::program_ctor!(
                PROGRAM = MyProgram::create(), params_struct =
                meta_in_program::__CreateParams
            );
            return;
        }
        if let Ok(header) = <sails::meta::SailsMessageHeader as sails::Decode>::decode(
            &mut input,
        ) {
            if header.interface_id() != sails::meta::InterfaceId::zero() {
                sails::gstd::unknown_input_panic(
                    "Non zero ctor interface_id",
                    header.to_bytes().as_slice(),
                );
            }
            match header.entry_id() {
                0u16 => {
                    let (): () = sails::scale_codec::DecodeAll::decode_all(&mut input)
                        .unwrap_or_else(|_| sails::gstd::unknown_input_panic(
                            "Unknown request",
                            input,
                        ));
                    sails::program_ctor!(
                        PROGRAM = MyProgram::create(), params_struct =
                        meta_in_program::__CreateParams
                    )
                }
                _ => sails::gstd::unknown_input_panic("Unexpected ctor entry_id", input),
            }
        }
    }
    const SERVICES_COUNT: usize = 2usize
        + sails::meta::count_base_services::<MyService>()
        + sails::meta::count_base_services::<MyService>();
    const INTERFACE_IDS: &'static [(sails::meta::InterfaceId, u8)] = &sails::meta::interface_ids::<
        SERVICES_COUNT,
    >(
        &[
            sails::meta::BaseServiceMeta::new::<MyService>(""),
            sails::meta::BaseServiceMeta::new::<MyService>(""),
        ],
    );
    #[unsafe(no_mangle)]
    extern "C" fn handle() {
        let mut input = gstd::msg::load_bytes().expect("Failed to read input");
        let program_ref = unsafe { PROGRAM.as_ref() }.expect("Program not initialized");
        if let Ok(header) = <sails::meta::SailsMessageHeader as sails::Decode>::decode(
            &mut input.as_slice(),
        ) {
            let header_len = header.hlen().inner() as usize;
            let (interface_id, route_id, entry_id) = header
                .try_match_interfaces(INTERFACE_IDS)
                .expect("Failed to find matching service")
                .into_inner();
            match route_id {
                1u8 => {
                    let svc = program_ref.service1();
                    sails::service_route_dispatch!(
                        svc : MyService, interface_id = interface_id, entry_id =
                        entry_id, input = & input[header_len..],
                    );
                }
                2u8 => {
                    let svc = program_ref.service2();
                    sails::service_route_dispatch!(
                        svc : MyService, interface_id = interface_id, entry_id =
                        entry_id, input = & input[header_len..],
                    );
                }
                _ => gstd::unknown_input_panic("Unknown route_id", &[route_id]),
            }
        }
    }
    #[unsafe(no_mangle)]
    extern "C" fn handle_reply() {
        use sails::meta::ProgramMeta;
        if MyProgram::ASYNC {
            gstd::handle_reply_with_hook();
        }
    }
    #[unsafe(no_mangle)]
    extern "C" fn handle_signal() {
        use sails::meta::ProgramMeta;
        if MyProgram::ASYNC {
            gstd::handle_signal();
        }
    }
}
